--- a/app/(ui)/projects/projects.module.scss
+++ b/app/(ui)/projects/projects.module.scss
@@ -37,14 +37,14 @@
 }
 
 .year {
-  margin-left: auto;
+  margin-top: 3px;
   color: #565656;
   font-family: "Satoshi-Bold";
 }
 
 .title {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .description {
@@ -54,8 +54,8 @@
 
 @media screen and (max-width: 600px) {
   .card {
-    width: 70vw;
-    height: 60vh;
+    width: 80vw;
+    height: 65vh;
   }
   .tech {
     width: 70vw;
