--- a/app/(ui)/navbar/navbar.module.scss
+++ b/app/(ui)/navbar/navbar.module.scss
@@ -20,8 +20,13 @@
   .navbar {
     padding-top: 25px;
     font-size: 1.7vh;
+    //justify-content: center;
   }
   .linkItems {
-    gap: 10px;
+    gap: 10px; //justify-content: space-around;
   }
+
+  // .name {
+  //   display: none;
+  // }
 }
