--- a/app/components/card/card.module.scss
+++ b/app/components/card/card.module.scss
@@ -1,15 +1,9 @@
 .card {
   background: white;
   box-shadow: -1px 8px 15px rgba(0, 0, 0, 0.2);
-  padding: 2.5vh;
-  text-align: justify;
-  text-justify: justify;
-  width: 20vw;
-  height: 25vh;
+  width: "100%";
+  min-height: 20vh;
 }
 
 @media screen and (max-width: 600px) {
-  .card {
-    width: 70vw;
-  }
 }
