--- a/app/(ui)/experience/experience.module.scss
+++ b/app/(ui)/experience/experience.module.scss
@@ -1,6 +1,6 @@
 .proj_h {
   position: relative;
-  height: 200vh;
+  height: 150vh;
 }
 
 .card {
@@ -33,6 +33,25 @@
 .duty {
   margin-top: 5px;
   font-size: 16px;
+}
+
+.cards {
+  display: flex;
+  gap: 30px;
+}
+
+.cards:first-child {
+  margin-left: 50px;
+}
+
+.container {
+  height: 100vh;
+  width: "100%";
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 600px) {
