--- a/app/(ui)/projects/projects.module.scss
+++ b/app/(ui)/projects/projects.module.scss
@@ -3,6 +3,25 @@
   height: 200vh;
 }
 
+.cards {
+  display: flex;
+  gap: 30px;
+}
+
+.cards:first-child {
+  margin-left: 50px;
+}
+
+.container {
+  height: 100vh;
+  width: "100%";
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
 .card {
   position: relative;
   background: white;
